# nactl

./: README.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: macos-ci.yml  release.yml  windows-ci.yml
docs/: nactl-requirements-design.md  nactl_update_instructions.md
nactl-macos/: Package.swift  README.md  test_nactl.sh
nactl-macos/.swiftpm/xcode/xcshareddata/xcschemes/: nactl.xcscheme
nactl-macos/Sources/nactl/: main.swift
nactl-macos/Sources/nactl/Commands/: DnsCommand.swift  PermissionsCommand.swift  PingCommand.swift  ProxyCommand.swift  StackCommand.swift  StatusCommand.swift  TraceCommand.swift  WifiCommand.swift
nactl-macos/Sources/nactl/Models/: NetworkStatus.swift  ProxyConfig.swift  WifiNetwork.swift
nactl-macos/Sources/nactl/Utils/: JSONOutput.swift  NetworkSetup.swift  ShellExecutor.swift
nactl-windows/: .gitignore  Cargo.toml  README.md  build.rs  nactl.manifest  nactl.rc  test_nactl.bat  test_nactl.ps1
nactl-windows/.cargo/: config.toml
nactl-windows/src/: errors.rs  lib.rs  main.rs
nactl-windows/src/commands/: dns.rs  mod.rs  ping.rs  proxy.rs  stack.rs  status.rs  trace.rs  wifi.rs
nactl-windows/src/utils/: admin.rs  mod.rs  netsh.rs  output.rs  powershell.rs  registry.rs  validation.rs
